# Fluxy

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: module.yml  publish.yml  python.yml
docs/: api.md  architecture.md  auth.md  gateway-config.md  historian-page-protocol.md  index.md  integration-tests.md  product-offering.md  release.md  session-compression.md  system-functions-integration-roadmap.md  user-guide.md  webdev-deployment.md
ignition-module/: .gitignore  NOTICE  PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  settings.gradle.kts
ignition-module/docs/: ia-onboarding.md  ignition-module.md  release.md
ignition-module/gateway/: build.gradle.kts
ignition-module/gateway/src/main/java/com/greenpipepartners/fluxy/gateway/: FluxyRoutes.java  HistorianStream.java
ignition-module/gateway/src/main/resources/: fluxy_dispatch.py
ignition-module/gateway/src/test/java/com/greenpipepartners/fluxy/gateway/: DispatcherCompatibilityTest.java  HistorianStreamTest.java
ignition-module/gateway/src/test/resources/: historian-columnar.ndjson
ignition-module/gateway81/: build.gradle.kts
ignition-module/gateway81/src/main/java/com/greenpipepartners/fluxy/gateway/: FluxyRoutes.java
ignition-module/gateway81/src/main/resources/: fluxy-build.properties  fluxy_dispatch.py
ignition-module/gateway81/src/test/java/com/greenpipepartners/fluxy/gateway/: DispatcherCompatibilityTest.java
ignition-module/tests/: test_integration_module.py
ignition_webdev/: readBlocking.py  writeBlocking.py
ignition_webdev/designer_body/: browse_doPost_body.py  configure_doPost_body.py  project_requestScan_doPost_body.py  readBlocking_doPost_body.py
legal/: CLA_POLICY.md  COPYRIGHT_ASSIGNMENT_TEMPLATE.md
legal/cla/: CORPORATE_CLA.md  INDIVIDUAL_CLA.md
scripts/: read_generated_tags.py  verify_python_distribution.py  write_readback_generated_tags.py
src/fluxy/: __init__.py  check_ignition_dev.py  core.py  deploy_scripting.py  gateway_config.py  named_query.py
src/fluxy/client/: __init__.py  core.py
src/fluxy/client/alarm/: Alarm.py  __init__.py
src/fluxy/client/db/: DB.py  __init__.py
src/fluxy/client/device/: Device.py  __init__.py
src/fluxy/client/historian/: Historian.py  __init__.py
src/fluxy/client/opc/: Opc.py  __init__.py
src/fluxy/client/opcua/: OpcUa.py  __init__.py
src/fluxy/client/project/: Project.py  __init__.py
src/fluxy/client/report/: Report.py  __init__.py
src/fluxy/client/tag/: Tag.py  __init__.py
src/fluxy/client/user/: User.py  __init__.py
src/fluxy/client/util/: Util.py  __init__.py
src/fluxy/deploy_webdev/: __init__.py  common.py  core.py  resource.py
src/fluxy/deploy_webdev/alarm/: __init__.py
src/fluxy/deploy_webdev/db/: __init__.py
src/fluxy/deploy_webdev/device/: __init__.py
src/fluxy/deploy_webdev/historian/: __init__.py
src/fluxy/deploy_webdev/opc/: __init__.py
src/fluxy/deploy_webdev/opcua/: __init__.py
src/fluxy/deploy_webdev/project/: __init__.py
src/fluxy/deploy_webdev/report/: __init__.py
src/fluxy/deploy_webdev/scripting/: __init__.py
src/fluxy/deploy_webdev/tag/: __init__.py
src/fluxy/deploy_webdev/user/: __init__.py
src/fluxy/deploy_webdev/util/: __init__.py
src/fluxy/ignition_expression/: __init__.py  bindings.py  cli.py  requests.py
src/fluxy/mcp/: __init__.py  server.py
src/fluxy/plugins/: __init__.py  sqlalchemy.py
tests/: path_helpers.py  test_check_ignition_dev.py  test_client.py  test_deploy_scripting.py  test_deploy_webdev.py  test_gateway_config.py  test_historian_stream.py  test_ignition_expression_bindings.py  test_ignition_expression_requests.py  test_integration_alarm.py  test_integration_browse_configured_tags.py  test_integration_configure_types.py  test_integration_db.py  test_integration_delete_tags.py  test_integration_device.py  test_integration_generated_tags.py  test_integration_generated_write_readback.py  test_integration_get_configuration.py  test_integration_historian.py  test_integration_import_export_tags.py  test_integration_move_rename_tags.py  test_integration_named_query.py  test_integration_opc.py  test_integration_postgres_db.py  test_integration_project_request_scan.py  test_integration_report.py  test_integration_scripting_run_function_file.py  test_integration_sql_historian.py  test_integration_tag_discovery.py  test_integration_user.py  test_integration_util.py  test_mcp_server.py  test_module_historian_page_dispatcher.py  test_module_historian_resolution.py  test_named_query.py  test_opcua.py  test_phase0_protocol.py  test_sqlalchemy_plugin.py
tests/fixtures/tags/: fluxy_import_export_source.json
