[project]
name = "fluxy"
version = "0.1.0"
description = "Python client that emulates Ignition system.tag readBlocking/writeBlocking via WebDev"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.35",
]
sqlalchemy = [
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["ignition_webdev", "flux_*"]

[tool.pyright]
include = ["src/fluxy"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests requiring a live Ignition Fluxy WebDev bridge",
]
