[project]
# PyPI distribution name only. The package, import namespace, docs, and CLI remain Fluxy/fluxy.
name = "fluxy-ign"
version = "0.1.3"
description = "Python client for controlled Ignition Gateway automation through WebDev or the Fluxy module"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Green Pipe Partners, LLC" },
]
keywords = ["ignition", "scada", "opc-ua", "webdev", "industrial-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27",
    "idna>=3.15",
]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0"]
mcp = ["mcp>=1.0", "starlette>=1.0.1"]

[project.scripts]
fluxy-deploy-webdev = "fluxy.deploy_webdev.core:main"
fluxy-deploy-scripting = "fluxy.deploy_scripting:main"
fluxy-gateway-config = "fluxy.gateway_config:main"
fluxy-check-ignition-dev = "fluxy.check_ignition_dev:main"
fluxy-ignition-expression = "fluxy.ignition_expression.cli:main"
fluxy-mcp = "fluxy.mcp.server:main"

[project.urls]
Homepage = "https://github.com/GreenPipePartners/Fluxy"
Repository = "https://github.com/GreenPipePartners/Fluxy"
Documentation = "https://github.com/GreenPipePartners/Fluxy/tree/main/docs"
Issues = "https://github.com/GreenPipePartners/Fluxy/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
sqlalchemy = [
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/ignition-module",
    "/script.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fluxy"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/fluxy",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/LICENSING.md",
    "/SECURITY.md",
    "/SUPPORT.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["ignition_webdev", "flux_*"]

[tool.ty.environment]
python-version = "3.12"
python-platform = "linux"
root = ["./src"]

[tool.ty.src]
include = ["src/fluxy"]

[tool.ty.analysis]
allowed-unresolved-imports = ["mcp.**", "sqlalchemy.**"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests requiring a live Ignition Fluxy transport",
]
